<resources>
    <string name="app_name">HW1_Group32</string>
    <string name="tvbilltotal">Bill Total</string>
    <string name="tvtip">Tip %</string>
    <string name="rbs10">10%</string>
    <string name="rbs20">15%</string>
    <string name="rbs18">18%</string>
    <string name="rbscustom">Custom</string>
    <string name="tvcustom">Custom</string>
    <string name="tvsprogress" />
    <string name="tvstip">Tip</string>
    <string name="tvvtip">0.00</string>
    <string name="tvstotal">Total</string>
    <string name="tvvtotal">0.00</string>
    <string name="btnsexit">Exit</string>
</resources>
